src/binary/snapshots/miniwasm__binary__module__tests__decode_fib.snap
---
source: src/binary/module.rs
expression: module
---
Module {
    magic: "\0asm",
    version: 1,
    custom_section: Some(
        Custom {
            name: "name",
            data: [
                1,
                6,
                1,
                0,
                3,
                102,
                105,
                98,
                2,
                6,
                1,
                0,
                1,
                0,
                1,
                110,
            ],
        },
    ),
    memory_section: None,
    type_section: Some(
        [
            FuncType {
                params: [
                    I32,
                ],
                results: [
                    I32,
                ],
            },
        ],
    ),
    function_section: Some(
        [
            0,
        ],
    ),
    import_section: None,
    export_section: Some(
        [
            Export {
                name: "fib",
                kind: Func(
                    0,
                ),
            },
        ],
    ),
    data_section: None,
    code_section: Some(
        [
            Function {
                locals: [],
                code: [
                    LocalGet(
                        0,
                    ),
                    I32Const(
                        2,
                    ),
                    I32LtS,
                    If(
                        Block {
                            block_type: Empty,
                        },
                    ),
                    I32Const(
                        1,
                    ),
                    Return,
                    End,
                    LocalGet(
                        0,
                    ),
                    I32Const(
                        2,
                    ),
                    I32Sub,
                    Call(
                        0,
                    ),
                    LocalGet(
                        0,
                    ),
                    I32Const(
                        1,
                    ),
                    I32Sub,
                    Call(
                        0,
                    ),
                    I32Add,
                    Return,
                    End,
                ],
            },
        ],
    ),
}
