src/binary/snapshots/miniwasm__binary__module__tests__decode_hello_world.snap
---
source: src/binary/module.rs
expression: module
---
Module {
    magic: "\0asm",
    version: 1,
    memory_section: Some(
        [
            Memory {
                limits: Limits {
                    min: 1,
                    max: None,
                },
            },
        ],
    ),
    type_section: Some(
        [
            FuncType {
                params: [
                    I32,
                    I32,
                    I32,
                    I32,
                ],
                results: [
                    I32,
                ],
            },
            FuncType {
                params: [],
                results: [
                    I32,
                ],
            },
        ],
    ),
    function_section: Some(
        [
            1,
        ],
    ),
    import_section: Some(
        [
            Import {
                module: "wasi_snapshot_preview1",
                field: "fd_write",
                kind: Func(
                    0,
                ),
            },
        ],
    ),
    export_section: Some(
        [
            Export {
                name: "_start",
                kind: Func(
                    1,
                ),
            },
        ],
    ),
    data_section: Some(
        [
            Data {
                memory_idx: 0,
                offset: Value(
                    I32(
                        0,
                    ),
                ),
                init: [
                    72,
                    101,
                    108,
                    108,
                    111,
                    44,
                    32,
                    87,
                    111,
                    114,
                    108,
                    100,
                    33,
                    10,
                ],
            },
        ],
    ),
    code_section: Some(
        [
            Function {
                locals: [
                    FunctionLocal {
                        type_count: 1,
                        value_type: I32,
                    },
                ],
                code: [
                    I32Const(
                        16,
                    ),
                    I32Const(
                        0,
                    ),
                    I32Store(
                        MemoryArg {
                            align: 2,
                            offset: 0,
                        },
                    ),
                    I32Const(
                        20,
                    ),
                    I32Const(
                        14,
                    ),
                    I32Store(
                        MemoryArg {
                            align: 2,
                            offset: 0,
                        },
                    ),
                    I32Const(
                        16,
                    ),
                    LocalSet(
                        0,
                    ),
                    I32Const(
                        1,
                    ),
                    LocalGet(
                        0,
                    ),
                    I32Const(
                        1,
                    ),
                    I32Const(
                        24,
                    ),
                    Call(
                        0,
                    ),
                    End,
                ],
            },
        ],
    ),
}
