src/binary/snapshots/miniwasm__binary__module__tests__decode_memory.snap
---
source: src/binary/module.rs
expression: module
---
Module {
    magic: "\0asm",
    version: 1,
    memory_section: Some(
        [
            Memory {
                limits: Limits {
                    min: 1,
                    max: None,
                },
            },
        ],
    ),
    type_section: None,
    function_section: None,
    import_section: None,
    export_section: None,
    data_section: None,
    code_section: None,
}
