src/binary/snapshots/miniwasm__binary__module__tests__decode_simplest_module.snap
---
source: src/binary/module.rs
expression: module
---
Module {
    magic: "\0asm",
    version: 1,
    custom_section: None,
    memory_section: None,
    type_section: None,
    function_section: None,
    import_section: None,
    export_section: None,
    data_section: None,
    code_section: None,
}
